syntax = "proto3";


option go_package = "featureflag.v1";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Refresh(RefreshRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}